--- a/startvote/templates/card.html
+++ b/startvote/templates/card.html
@@ -81,6 +81,8 @@
             font-weight: 700;
             line-height: 1.2857em;
             color: black;
+            white-space:nowrap;
+            text-overflow:ellipsis;overflow:hidden;
         }
 
         .card-text {
@@ -219,6 +221,7 @@
         .cover{
             height: 170px;
         }
+
 
     .adjustsize {
 		padding-left: 40%;
