--- a/startvote/templates/login.html
+++ b/startvote/templates/login.html
@@ -75,8 +75,11 @@
     @media (max-width: 767px) {
 
 	.adjustsize {
-		top:10%;left:1%;
+		top:10%;left:5%;
 	}
+        .login-form{
+            width:90%;
+        }
     }
 </style>
 <body >
