connect frontend and backend, support upload image

--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -323,7 +323,7 @@
                     <div class="panel-collapse collapse in">
                         <div class="panel-body">
                             <div class="media">
-                                <img class="align-self-end mr-3 img-thumbnail vote_img" src="{{ c.img }}" alt="媒体对象">
+                                <img class="align-self-end mr-3 img-thumbnail vote_img" src="{{ MEDIA_URL }}{{ c.img }}" alt="媒体对象">
                                 <div class="media-body">
                                     <h4 class="media-heading">{{c.simple}}</h4>
                                     <pre>{{ c.detail }}</pre>
