--- a/startvote/templates/form.html
+++ b/startvote/templates/form.html
@@ -147,8 +147,15 @@
             <label>
                 <span>投票介绍</span>
                 <textarea name="vote_description"></textarea>
+
             </label>
-        </div>
+        </div> <div class="form-row">
+        <label>
+            <span style="float: left">上传图片</span>
+            <input id="input-b2" class="adjust" style="float: left;padding: 5px;font-weight: 300;" name="attachments" type="file" class="file" data-show-preview="false">
+
+        </label>
+    </div>
 
         <div class="form-row">
             <label>
@@ -262,7 +269,7 @@
 
 
 
-</div>
+
 
 
 </body>
