--- a/startvote/templates/block_info.html
+++ b/startvote/templates/block_info.html
@@ -60,7 +60,7 @@
             }
 
             .modal-content {
-                width: 80%;
+                width: 90%;
                 margin: 10% auto auto auto;
                 overflow-x: auto;
             }
@@ -110,6 +110,9 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 <h4 class="modal-title text-center myfont smallerfont" id="exampleModalCenterTitle">Block Info</h4>
             </div>
             <div class="modal-body">
