--- a/startvote/templates/card.html
+++ b/startvote/templates/card.html
@@ -16,20 +16,20 @@
     <title>Basic Form</title>
 
     <link rel="stylesheet" type="text/css" href="/static/css/isotope.css" media="screen" />
-  <link rel="stylesheet" href="/static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="/static/css/bootstrap.css">
-  <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
-  <link rel="stylesheet" href="/static/css/style.css">
-  <!-- skin -->
-  <link rel="stylesheet" href="/static/skin/default.css"><script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="/static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <!-- skin -->
+    <link rel="stylesheet" href="/static/skin/default.css"><script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
     <!------ Include the above in your HEAD tag ---------->
 
     <style type="text/css">
         body {
-		color: #fff;
-		background: #65B0A7;
-	        }
+            color: #fff;
+            background: #65B0A7;
+        }
         html {
             font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
             font-size: 14px;
@@ -71,7 +71,7 @@
         }
 
         .card-block-null{
-           border-top:none;
+            border-top:none;
         }
 
         .card-img-top {
@@ -231,133 +231,133 @@
         }
 
 
-    .adjustsize {
-		padding-left: 40%;
-	}
-    .adjustsize2{
-        margin-left: 40%;
-    }
-
-    @media (max-width: 767px) {
-
-	.adjustsize {
-		padding-left: 30%;
-	}
-        .myfont{
-            font-size: 34px;
-        }
-        .float-right{
-            margin-right:0px;
-        }
-        .card{
-            margin-top: 10px;
-        }
-        .mycontainer{
-            margin-top: 20px;
-            padding-left: 30px;
-            padding-right: 30px;
-        }
-        .col-lg-3{
-            width: 50%;
-            padding-right: 7px;
-            padding-left: 7px;
-        }
-        .card-title {
-            font-size: 0.85em;
-            margin-bottom: 5px;
-        }
-        .card-text {
-            font-size: 10px;
-            margin-top: 0em;
-            height: 36px;
-            line-height: 12px;
-        }
-        .cover {
-            height: 100px;
+        .adjustsize {
+            padding-left: 40%;
         }
         .adjustsize2{
-        margin-left: 35%;
-    }
+            margin-left: 40%;
+        }
+
+        @media (max-width: 767px) {
+
+            .adjustsize {
+                padding-left: 30%;
+            }
+            .myfont{
+                font-size: 34px;
+            }
+            .float-right{
+                margin-right:0px;
+            }
+            .card{
+                margin-top: 10px;
+            }
+            .mycontainer{
+                margin-top: 20px;
+                padding-left: 30px;
+                padding-right: 30px;
+            }
+            .col-lg-3{
+                width: 50%;
+                padding-right: 7px;
+                padding-left: 7px;
+            }
+            .card-title {
+                font-size: 0.85em;
+                margin-bottom: 5px;
+            }
+            .card-text {
+                font-size: 10px;
+                margin-top: 0em;
+                height: 36px;
+                line-height: 12px;
+            }
+            .cover {
+                height: 100px;
+            }
+            .adjustsize2{
+                margin-left: 35%;
+            }
 
 
-    }
-</style>
+        }
+    </style>
 </head>
 
 <body>
 <div class="container">
-<div class="container mycontainer">
-    <div class="row adjustsize" >
-        <div class="form-title-row">
+    <div class="container mycontainer">
+        <div class="row adjustsize" >
+            <div class="form-title-row">
                 <a href="{% url 'index' %}" ><h1 class="myfont">BlockVote</h1></a>
             </div>
-    </div>
-    <div class="row" style="padding-top: 15px">
-    {%for result in result_list %}
-            <div class="col-sm-6 col-md-4 col-lg-3 mt-4" style="float: left">
-                <div  class="card card-inverse card-info">
-                <div class="cover">
-                    <img class="card-img-top" src="/static/img/2.png" onerror="this.src='/static/img/2.png'">
-                    </div>
-                    <div class="card-block">
-
-                        <h4 class="card-title" title={{ result.vote.vote_name }}>{{ result.vote.vote_name }}</h4>
-                        <div class="card-text">
-                            {{ result.vote.vote_description }}
+        </div>
+        <div class="row" style="padding-top: 15px">
+            {%for result in result_list %}
+                <div class="col-sm-6 col-md-4 col-lg-3 mt-4" style="float: left">
+                    <div  class="card card-inverse card-info">
+                        <div class="cover">
+                            <img class="card-img-top" src="/static/img/2.png" onerror="this.src='/static/img/2.png'">
                         </div>
-                    </div>
-                    {% if result.vote.vote_state  == 1 %}
-                        <a href="{% url 'vote' target=result.target %}"><button type="button" class="btn btn-danger btn-lg btn-block">
-                    未开始({{ result.condition }})
+                        <div class="card-block">
+
+                            <h4 class="card-title" title={{ result.vote.vote_name }}>{{ result.vote.vote_name }}</h4>
+                            <div class="card-text">
+                                {{ result.vote.vote_description }}
+                            </div>
+                        </div>
+                        {% if result.vote.vote_state  == 1 %}
+                            <a href="{% url 'vote' target=result.target %}"><button type="button" class="btn btn-danger btn-lg btn-block">
+                            未开始({{ result.condition }})
                         {% elif result.vote.vote_state  == 2 %}
-                        <a href="{% url 'vote' target=result.target %}"><button type="button" class="btn btn-success btn-lg btn-block">
-                    进行中({{ result.condition }})
+                            <a href="{% url 'vote' target=result.target %}"><button type="button" class="btn btn-success btn-lg btn-block">
+                            进行中({{ result.condition }})
                         {% else %}
-                        <a href="{% url 'vote' target=result.target %}"><button type="button" class="btn btn-primary btn-lg btn-block">
-                    已结束({{ result.condition }})
+                            <a href="{% url 'vote' target=result.target %}"><button type="button" class="btn btn-primary btn-lg btn-block">
+                            已结束({{ result.condition }})
                         {% endif %}
 
-                    </button> </a>
+                        </button> </a>
 
+                    </div>
                 </div>
-            </div>
-    {% endfor %}
+            {% endfor %}
 
 
 
-{#        加号#}
+            {#        加号#}
 
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4" style="float: left">
-            <div class="card card-inverse card-info ">
-                <div class="cover">
-                <img class="card-img-top-null" src="/static/img/null.png">
-               <a  href="{% url 'form' %}"><i class="fa fa-plus-circle fa-3x adjustsize2" style="color: #65B0A7;margin-top: -8%"></i></a>
-                </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4" style="float: left">
+                <a  href="{% url 'form' %}"><div class="card card-inverse card-info ">
+                    <div class="cover">
+                        <img class="card-img-top-null" src="/static/img/null.png">
+                        <i class="fa fa-plus-circle fa-3x adjustsize2" style="color: #65B0A7;margin-top: -8%"></i>
+                    </div>
 
                     <div class="card-block card-block-null">
 
-                    <h4 class="card-title">&nbsp</h4>
-                    <div class="card-text">
-                        <br/>&nbsp
+                        <h4 class="card-title">&nbsp</h4>
+                        <div class="card-text">
+                            <br/>&nbsp
+                        </div>
                     </div>
-                </div>
-                 <button type="button" class="btn btn-primary btn-lg btn-block invisible">Sposored by Me</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block invisible">Sposored by Me</button>
 
+                </div></a>
             </div>
+
+
         </div>
 
 
     </div>
-
-
-</div>
     <div >
 
-{#        <a href="{% url 'index' %}">#}
-{#        <button class="btn btn-info float-right btn-sm btn-lg" style="margin-bottom: 20px">#}
-{#                  Back</button></a>#}
+        {#        <a href="{% url 'index' %}">#}
+        {#        <button class="btn btn-info float-right btn-sm btn-lg" style="margin-bottom: 20px">#}
+        {#                  Back</button></a>#}
         <a href="{% url 'index' %}"><button  type="button"  class="btn float-right" style="font-weight:600;margin-bottom:30px;color:white;background:teal;box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .2), 0 1px 8px 0 rgba(0, 0, 0, .12)">
-                  &nbsp&nbspBack&nbsp&nbsp</button></a>
+            &nbsp&nbspBack&nbsp&nbsp</button></a>
     </div>
 
 
