--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -11,8 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Basic Form</title>
-
+    <title>Vote</title>
     <link rel="stylesheet" type="text/css" href="/static/css/isotope.css" media="screen"/>
     <link rel="stylesheet" href="/static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen"/>
     <!-- skin -->
@@ -20,9 +19,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"
-            integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
-            crossorigin="anonymous"></script>
+{#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"#}
+{#            integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"#}
+{#            crossorigin="anonymous"></script>#}
     <script src="/static/js/jsrsasign-all-min.js"></script>
     <script src="/static/js/encryption.js"></script>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
@@ -30,10 +29,33 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/skin/default.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.dev.js"></script>
+    <script src="/static/js/jquery-1.10.2.min.js"></script>
+{#        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>#}
+
+    {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">#}
+
+
 
     <!------ Include the above in your HEAD tag ---------->
 
     <style type="text/css">
+
+        .mr-3{
+            color: r;
+            margin-right: 1rem!important;
+        }
+        .media-body{
+            flex: 1;
+        }
+        .mt-0{
+            margin-top: 0!important;
+        }
+
+        .middle{
+            margin-right: auto;
+            margin-left: auto;
+            width: 256px;
+        }
         body {
             color: #fff;
             background: #65B0A7;
@@ -42,6 +64,10 @@
         html {
             font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
             font-size: 14px;
+        }
+
+        .float-right{
+            margin-right:-30px;
         }
 
         h5 {
@@ -75,71 +101,6 @@
             box-shadow: none;
         }
 
-        .card-block-null {
-            border-top: none;
-        }
-
-        .card-img-top {
-            display: block;
-            width: 100%;
-            height: 50%;
-        }
-
-        .card-img-top-null {
-            display: block;
-            width: 90%;
-        }
-
-        .card-title {
-            font-size: 1.28571429em;
-            font-weight: 700;
-            line-height: 1.2857em;
-            color: black;
-        }
-
-        .card-text {
-            clear: both;
-            margin-top: .5em;
-            color: rgba(0, 0, 0, .68);
-            height: 70px;
-            overflow: scroll;
-        }
-
-        .card-footer {
-            font-size: 1em;
-            position: static;
-            top: 0;
-            left: 0;
-            max-width: 100%;
-            padding: .75em 1em;
-            color: rgba(0, 0, 0, .4);
-            border-top: 1px solid rgba(0, 0, 0, .05) !important;
-            background: #fff;
-        }
-
-        .unfinish {
-            color: red;
-        }
-
-        .finished {
-            color: forestgreen;
-        }
-
-        .myself {
-            color: cornflowerblue;
-        }
-
-        .card-footer-null {
-            font-size: 1em;
-            position: static;
-            top: 0;
-            left: 0;
-            max-width: 100%;
-            padding: .75em 1em;
-            color: rgba(0, 0, 0, .4);
-            border-top: none;
-            background: #fff;
-        }
 
         .card-inverse .btn {
             border: 1px solid rgba(0, 0, 0, .05);
@@ -206,7 +167,7 @@
         .mycontainer {
             border-radius: 10px 10px 10px 10px;
             margin-top: 50px;
-            margin-bottom: 0px;
+            margin-bottom: 20px;
             background: #ffffff;
             box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
             padding-bottom: 30px;
@@ -232,6 +193,11 @@
             color: #4c565e;
         }
 
+        .smallerfont{
+            font-size: 22px;
+            font-weight: 600;
+        }
+
         .list-group-item {
             color: #000000;
         }
@@ -243,6 +209,8 @@
         .row {
             margin-top: 20px;
             margin-bottom: 20px;
+            margin-left: 0px;
+            margin-right: 0px;
         }
 
         .progress {
@@ -278,61 +246,133 @@
             float: left;
             margin-right: 3px;
         }
+        .adjustsize {
+            padding-left: 40%;
+        }
+        .adjustsize2{
+            margin-left: 40%;
+        }
+
+        @media (max-width: 767px) {
+
+
+            .media-heading{
+                font-size: 10px;
+            }
+
+            .progress button{
+                width: 20%;
+            }
+
+            .adjustsize {
+                padding-left: 30%;
+            }
+            .myfont{
+                font-size: 32px;
+                line-height: 36px;
+            }
+            .smallerfont{
+                font-size: 22px;
+                font-weight: 600;
+            }
+            .float-right{
+                margin-right:0px;
+            }
+            .card{
+                margin-top: 10px;
+            }
+            .mycontainer{
+                margin-top: 20px;
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-bottom: 10px;
+            }
+            .col-lg-3{
+                width: 50%;
+                padding-right: 7px;
+                padding-left: 7px;
+            }
+            .card-title {
+                font-size: 0.85em;
+                margin-bottom: 5px;
+            }
+            .card-text {
+                font-size: 10px;
+                margin-top: 0em;
+                height: 36px;
+                line-height: 12px;
+            }
+            .cover {
+                height: 100px;
+            }
+            .adjustsize2{
+                margin-left: 35%;
+            }
+            .smallermargin{
+                margin-top: 0;
+            }
+
+
+        }
+
     </style>
 
 </head>
 
 <body>
 <div class="container">
+
     <div class="container mycontainer">
 
-        <div class="row" style="color: #000;">
+        <div class="row smallermargin" style="color: #000;">
             <div class="form-title-row">
-                <a><h1 class="myfont">{{ vote.vote_name }}</h1></a>
+                <a><h1 style="float: left;" class="myfont">{{ vote.vote_name }}</h1></a>
+                <i data-toggle="modal" data-target="#exampleModal" class="fa fa-share-square-o" style="margin-left: 10px"></i>
             </div>
+
             <div style="margin: 10px"> {{ type }}</div>
             <div style="margin: 10px"> {{ vote.vote_description }}</div>
         </div>
         <div class="row" >
-            <button style="float: right" type="button" class="btn btn-success" data-toggle="collapse" data-target=".candidates">Open All</button>
+
+            <button id="showall" style="float: right" type="button" class="btn btn-success" data-toggle="collapse" data-target=".candidates">Show All Details</button>
         </div>
 
-        {#        <div class="w-0 p-3" style="background-color: #eee;">Width 25%</div>#}
-        {#        <div class="row">#}
-        {#            <div class="progress">#}
-        {#                <div class="progress-bar  progress-bar-info" role="progressbar" aria-valuenow="10"#}
-        {#                     aria-valuemin="0" aria-valuemax="100" style="width: 20%;">#}
-        {#                </div>#}
-        {#                <span style="color:#000000; position:relative">A. 张诗奇牛逼</span>#}
-        {#            </div>#}
-        {#            <button type="button" class="btn btn-info">Info</button>#}
-        {#        </div>#}
 
         {% for c in candidate %}
             <div class="row">
                 <div class="progress" style="position: relative;">
-                    <button type="button" class="btn btn-success" data-toggle="collapse"
+                    <button type="button" class="btn btn-success" data-toggle="collapse" aria-expanded="false" aria-controls="{{ c.id }}"
                             data-target="#{{ c.id }}"> Details
                     </button>
                     <div class="progress" onclick="clicked(this)">
                         <span style="color:#000000; position:absolute;">{{ c.title}} {{ c.voteNum }}票</span>
                         <div class="progress-bar  progress-bar-info" role="progressbar" aria-valuenow="10"
-                             aria-valuemin="0" aria-valuemax="100" style="width: {{ c.width }}%" onclick="clicked(this)"
+                             aria-valuemin="0" aria-valuemax="100" style="width: {{ c.width }}%; min-width:{{ c.width }}%"
                              id="prog{{ c.id }}">
                         </div>
                     </div>
                 </div>
 
                 <div class="panel panel-default collapse candidates" id="{{ c.id }}">
-                    <div class="panel-collapse collapse in">
+                    <div class="panel-collapse ">
                         <div class="panel-body">
                             <div class="media">
-                                <img class="align-self-end mr-3 img-thumbnail vote_img" src="{{ MEDIA_URL }}{{ c.img }}" alt="媒体对象">
-                                <div class="media-body">
-                                    <h4 class="media-heading">{{c.simple}}</h4>
-                                    <pre>{{ c.detail }}</pre>
+                                <img class="mr-3 vote_img"  src="{{ c.img }}" alt="媒体对象">
+                                <div class="media-body" style="color: black">
+                                    <h5 class="mt-0 myfont smallerfont">{{c.title}}</h5>
+                                    {{ c.simple }}<br>{{ c.detail }}
                                 </div>
                             </div>
+                            {##}
+                            {##}
+                            {#                            <div class="media">#}
+                            {#                                <img class="align-self-end mr-3 img-thumbnail vote_img" src="{{ c.img }}" alt="媒体对象">#}
+                            {#                                <div class="media-body">#}
+                            {#                                    <h4 class="media-heading">{{c.simple}}</h4>#}
+                            {#                                    <pre>{{ c.detail }}</pre>#}
+                            {#                                </div>#}
+                            {#                            </div>#}
                         </div>
                     </div>
                 </div>
@@ -340,14 +380,8 @@
         {% endfor %}
 
 
-        <div class="row">
-            <button type="button" class="btn btn-info center-block btn-lg btn-warning" id="Submit"
-                    data-loading="<i class='fa fa-circle-o-notch fa-spin'></i> Processing Order"> Submit
-            </button>
-        </div>
 
-
-        <div class="row center-block" style="">
+        <div class="row center-block" style="margin-top: 35px; margin-bottom: 35px;">
             <p class="center-block">
                 <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button"
                    aria-expanded="false" aria-controls="multiCollapseExample1">Public Key</a>
@@ -372,6 +406,12 @@
             </div>
         </div>
 
+        <div class="row">
+            <button type="button" class="btn btn-info center-block btn-lg btn-warning" id="Submit"
+                    data-loading="<i class='fa fa-circle-o-notch fa-spin'></i> Processing Order"> Submit
+            </button>
+        </div>
+
 
     </div>
     <div>
@@ -379,29 +419,69 @@
         {#        <a href="{% url 'index' %}">#}
         {#        <button class="btn btn-info float-right btn-sm btn-lg" style="margin-bottom: 20px">#}
         {#                  Back</button></a>#}
-        <a href="{% url 'index' %}">
-            <button type="button" class="btn float-right"
-                    style="margin-bottom:30px;margin-right:0px;color:white;background:teal;box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .2), 0 1px 8px 0 rgba(0, 0, 0, .12)">
-                &nbsp&nbspBack&nbsp&nbsp
-            </button>
-        </a>
+        <a href="{% url 'index' %}"><button  type="button"  class="btn float-right" style="font-weight:600;margin-bottom:30px;color:white;background:teal;box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .2), 0 1px 8px 0 rgba(0, 0, 0, .12)">
+            &nbsp&nbspBack&nbsp&nbsp</button></a>
+
+    </div>
+
+
+    <!-- Modal -->
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content" style="width: 300px;margin-left: auto;margin-right: auto">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="middle">
+                        <div id="qrcode3"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
 </div>
+<script src="/static/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/jquery.easing.1.3.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/jquery.isotope.min.js"></script>
+<script src="/static/js/jquery.nicescroll.min.js"></script>
+<script src="/static/js/fancybox/jquery.fancybox.pack.js"></script>
+<script src="/static/js/skrollr.min.js"></script>
+<script src="/static/js/jquery.scrollTo.js"></script>
+<script src="/static/js/jquery.localScroll.js"></script>
+<script src="/static/js/stellar.js"></script>
+<script src="/static/js/jquery.appear.js"></script>
+<script src="/static/js/main.js"></script>
+<script src="/static/contactform/contactform.js"></script>
+<script type="text/javascript" src="/static/js/jquery.qrcode.min.js"></script>
+
 
 <script>
     var pair = generate_pair();
     $("#pubkey").text(toPKCS8(pair.pubKeyObj));
     $("#privkey").text(toPCK1(pair.prvKeyObj));
-    init((toPCK1(pair.prvKeyObj)))
-</script>
-<script>
+    init((toPCK1(pair.prvKeyObj)));
+
+    jQuery(function(){
+        //二维码的跳转网页地址
+        jQuery('#qrcode3').qrcode("http://baidu.com");
+    });
+
     var thisobj;
     var voteLimit = {{ voteLimit }};
     var max_id = {{ max_id }};
     var miner_list = {{ miner_list|safe }};
     console.log(miner_list);
+    var showall=0;
+    var choose_color="linear-gradient(to bottom, rgb(255, 102, 0) 0%, rgb(255, 80, 80) 100%)";
+    var origin_color="linear-gradient(to bottom, #5bc0de 0%, #31b0d5 100%)";
 
     function clicked(obj) {
         if (voteLimit === 1) {
@@ -411,11 +491,24 @@
             }
         }
         if (obj.children[1].style.width === "100%"){
-            obj.children[1].style.width = "0%";
+            obj.children[1].style.backgroundImage=origin_color;
+            obj.children[1].style.width=obj.children[1].style.minWidth;
+
         }else {
-            obj.children[1].style.width = "100%";
+            obj.children[1].style.backgroundImage=choose_color;
+            obj.children[1].style.width ="100%";
         }
     }
+    $("#showall").click(function () {
+        if(showall==0){
+            $(this).html("Hide All Details");
+            showall++;
+        }
+        else {
+            $(this).html("Show All Details");
+            showall--;
+        }
+    });
 
 
     $("#Submit").on('click', function () {
@@ -465,4 +558,5 @@
         $(this).html("Done");
     })
 </script>
+
 </body>
