--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -461,13 +461,20 @@
 <script src="/static/js/main.js"></script>
 <script src="/static/contactform/contactform.js"></script>
 <script type="text/javascript" src="/static/js/jquery.qrcode.min.js"></script>
-
+<script src="/static/js/elliptic/lib/bundle.js"></script>
+<script src="/static/js/md5.js"></script>
 
 <script>
-    var pair = generate_pair();
+    {#var pair = generate_pair();#}
+    {#$("#pubkey").text(toPKCS8(pair.pubKeyObj));#}
+    {#$("#privkey").text(toPCK1(pair.prvKeyObj));#}
+    {#init((toPCK1(pair.prvKeyObj)));#}
+    $("#privkey").text(key.toString());
+    var EdDSA = require('elliptic').eddsa;
+    var ec = new EdDSA('ed25519');
+    var key = ec.keyFromSecret(hex_md5('fff'));
     $("#pubkey").text(toPKCS8(pair.pubKeyObj));
-    $("#privkey").text(toPCK1(pair.prvKeyObj));
-    init((toPCK1(pair.prvKeyObj)));
+
 
     jQuery(function(){
         //二维码的跳转网页地址
@@ -478,7 +485,7 @@
     var voteLimit = {{ voteLimit }};
     var max_id = {{ max_id }};
     var miner_list = {{ miner_list|safe }};
-    console.log(miner_list);
+    {#console.log(miner_list);#}
     var showall=0;
     var choose_color="linear-gradient(to bottom, rgb(255, 102, 0) 0%, rgb(255, 80, 80) 100%)";
     var origin_color="linear-gradient(to bottom, #5bc0de 0%, #31b0d5 100%)";
